Segunda Versión del aplicativo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>Correo: 72134458@continental.edu.pe</p>
             <p>Universidad Continental</p>
             <span>Imagenes de la Universidad Continental</span>
-            <img src="continental.jpg" alt="">
+            <img src="continental.jpg" alt="continental">
         </div>
     </div>
 </body>
