--- a/index.html
+++ b/index.html
@@ -4,17 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina web Personal con GIT</title>
-    <link rel="stylesheet" src="style.css">
+    <link rel="stylesheet" src="styles.css">
 </head>
 <body>
-    <div id="#mrshome">
+    <div id="mrshome">
         <div class="boxmrs1">
-            <p>Asignatura: Construcción de Software</p>
-            <p>Participante: Elvis Roberto Bautista Huillca</p>
-            <p>Correo: 72134458@continental.edu.pe</p>
+            <p><strong>Asignatura:</strong> Construcción de Software</p>
+            <p><strong>Participante:</strong> Elvis Roberto Bautista Huillca</p>
+            <p><strong>Correo:</strong> 72134458@continental.edu.pe</p>
             <p>Universidad Continental</p>
             <span>Imagenes de la Universidad Continental</span>
-            <img src="continental.jpg" alt="continental">
+            <img src="continental.jpg" alt="continental1" width="500" height="500">
+            <img src="continental2.jpg" alt="continental2" width="500" height="500">
+            <p>Videos y Geolocalización</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/q9bU12gXUyM?si=HR6OUjC3mVYZzxP_" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <br>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3878.6662255626097!2d-71.85895702415762!3d-13.556055371837582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x916e7d4c9db42bf5%3A0xe56b22b37c2e89f9!2sUniversidad%20Continental%20-%20Campus%20Cusco!5e0!3m2!1ses-419!2spe!4v1742946456768!5m2!1ses-419!2spe" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 </body>
